набросок login buckets
